--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -6,8 +6,8 @@ banner:
   image: "images/logo-pts23.png"
   button:
     enable: true
-    label: "Watch 2024 edition videos!"
-    link: "https://passthesalt.ubicast.tv/channels/#2024"
+    label: "Submit your proposal to our CFP!"
+    link: "https://cfp.pass-the-salt.org/pts2025/cfp"
 
 ############################# description ############################
 description:
