--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -155,13 +155,20 @@ sponsors:
   #   width: ""
   silver_sponsor_item:
   # silver sponsors loop
-  # - name: "Synacktiv"
-  #   designation: "SILVER sponsor"
-  #   image: "images/sponsors/synacktiv.png"
-  #   content: ""
-  #   url: "https://www.synacktiv.com/"
-  #   height: "74"
-  #   width: "370"  
+    - name: "Synacktiv"
+      designation: "SILVER sponsor"
+      image: "images/sponsors/synacktiv.png"
+      content: ""
+      url: "https://www.synacktiv.com/"
+      height: "74"
+      width: "370"  
+    - name: "Epsilon"
+      designation: "SILVER sponsor"
+      image: "images/sponsors/epsilon.png"
+      content: ""
+      url: "https://www.epsilon-sec.com/"
+      height: "132"
+      width: "320"  
   # - name: "SEEKITSEC"
   #   designation: "SILVER sponsor"
   #   image: "images/sponsors/seek-it-security.png"
@@ -176,14 +183,6 @@ sponsors:
   #   url: "https://www.randorisec.fr/"
   #   height: "76"
   #   width: "400"  
-    - name: "Epsilon"
-      designation: "SILVER sponsor"
-      image: "images/sponsors/epsilon.png"
-      content: ""
-      url: "https://www.epsilon-sec.com/"
-      height: "132"
-      width: "320"  
-
   partner_item:
   # partners loop
   # - name: "Polytech"
