add QB sponsorship

--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -118,13 +118,13 @@ sponsors:
       width: "382"
   gold_sponsor_item:
   # gold sponsors loop
-  # - name: "Quarkslab"
-  #   designation: "GOLD sponsor"
-  #   image: "images/sponsors/quarkslab.svg"
-  #   content: ""
-  #   url: "https://www.quarkslab.com/"
-  #   height: "101"
-  #   width: "352"
+    - name: "Quarkslab"
+      designation: "GOLD sponsor"
+      image: "images/sponsors/quarkslab.svg"
+      content: ""
+      url: "https://www.quarkslab.com/"
+      height: "101"
+      width: "352"
   # - name: "Cyberzen"
   #   designation: "GOLD sponsor"
   #   image: "images/sponsors/cyberzen.png"
