add Randorisec, Passbolt sponsorships + sponsors icons centering

--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -102,13 +102,13 @@ sponsors:
   #   url: "https://www.gandi.net/"
   #   height: "210"
   #   width: "192"
-  # - name: "Passbolt"
-  #   designation: "PLATINUM sponsor"
-  #   image: "images/sponsors/passbolt.png"
-  #   content: ""
-  #   url: "https://www.passbolt.com/"
-  #   height: "61"
-  #   width: "361"
+    - name: "Passbolt"
+      designation: "PLATINUM sponsor"
+      image: "images/sponsors/passbolt.png"
+      content: ""
+      url: "https://www.passbolt.com/"
+      height: "61"
+      width: "361"
     - name: "Université Catholique de Lille"
       designation: "PLATINUM partner"
       image: "images/sponsors/UCL.png"
@@ -162,6 +162,13 @@ sponsors:
       url: "https://www.synacktiv.com/"
       height: "74"
       width: "370"  
+    - name: "Randorisec"
+      designation: "SILVER sponsor"
+      image: "images/sponsors/randorisec.png"
+      content: ""
+      url: "https://www.randorisec.fr/"
+      height: "174"
+      width: "200"
     - name: "Epsilon"
       designation: "SILVER sponsor"
       image: "images/sponsors/epsilon.png"
@@ -176,13 +183,7 @@ sponsors:
   #   url: "https://www.linkedin.com/company/seek-it-security"
   #   height: "75"
   #   width: "240"
-  # - name: "Randorisec"
-  #   designation: "SILVER sponsor"
-  #   image: "images/sponsors/randorisec.png"
-  #   content: ""
-  #   url: "https://www.randorisec.fr/"
-  #   height: "76"
-  #   width: "400"  
+
   partner_item:
   # partners loop
   # - name: "Polytech"
