Add penthertz sponsorship

--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -146,13 +146,6 @@ sponsors:
   #   url: "https://github.com/cea-sec"
   #   height: "104"
   #   width: "104"
-  # - name: "Google"
-  #   designation: "GOLD sponsor"
-  #   image: "images/sponsors/google.png"
-  #   content: ""
-  #   url: "https://osdfir.blogspot.com/"
-  #   height: ""
-  #   width: ""
   silver_sponsor_item:
   # silver sponsors loop
     - name: "Synacktiv"
@@ -176,6 +169,13 @@ sponsors:
       url: "https://www.epsilon-sec.com/"
       height: "132"
       width: "320"  
+    - name: "Penthertz"
+      designation: "SILVER sponsor"
+      image: "images/sponsors/penthertz.png"
+      content: ""
+      url: "https://www.penthertz.com/"
+      height: "101"
+      width: "303"
   # - name: "SEEKITSEC"
   #   designation: "SILVER sponsor"
   #   image: "images/sponsors/seek-it-security.png"
