add Gandi sponsoring + more sharp passbolt logo

--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -98,27 +98,27 @@ sponsors:
   title: "Sponsors"
   platinum_sponsor_item:
   # platinum sponsors loop
-  # - name: "Gandi"
-  #   designation: "PLATINUM sponsor"
-  #   image: "images/sponsors/gandi.png"
-  #   content: ""
-  #   url: "https://www.gandi.net/"
-  #   height: "210"
-  #   width: "192"
+    - name: "Gandi"
+      designation: "PLATINUM sponsor"
+      image: "images/sponsors/gandi.png"
+      content: ""
+      url: "https://www.gandi.net/"
+      height: "77"
+      width: "273"
     - name: "Passbolt"
       designation: "PLATINUM sponsor"
       image: "images/sponsors/passbolt.png"
       content: ""
       url: "https://www.passbolt.com/"
-      height: "61"
-      width: "361"
+      height: "48"
+      width: "270"
     - name: "Université Catholique de Lille"
       designation: "PLATINUM partner"
       image: "images/sponsors/UCL.png"
       content: ""
       url: "https://www.univ-catholille.fr/en/"
-      height: "209"
-      width: "382"
+      height: "104"
+      width: "191"
   gold_sponsor_item:
   # gold sponsors loop
     - name: "Quarkslab"
