--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ weight = 1
 
 [[menu.main]]
 name = "Schedule"
-url = "https://cfp.pass-the-salt.org/pts2025/schedule/"
+url = "/files/Schedule-A3-2025.pdf"
 weight = 2
 
 #[[menu.main]]
