--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ################################### Default Configuration ############################
-baseurl = "https://pass-the-salt.github.io/2025"
+baseurl = "https://pass-the-salt.github.io"
 title = "Pass the SALT 2025"
 theme = "vex-hugo"
 # post excert
@@ -29,8 +29,6 @@ link = "plugins/bootstrap/bootstrap.min.css"
 link = "plugins/themefisher-font/themefisher-font.min.css"
 [[params.plugins.css]]
 link = "plugins/slick/slick.min.css"
-# [[params.plugins.css]]
-# link = "https://cdn.snipcart.com/themes/v3.0.27/default/snipcart.css"
 
 # JS Plugins
 [[params.plugins.js]]
@@ -39,17 +37,9 @@ link = "plugins/jquery/jquery.js"
 link = "plugins/bootstrap/bootstrap.min.js"
 [[params.plugins.js]]
 link = "plugins/slick/slick.min.js"
-# [[params.plugins.js]]
-# link = "https://cdn.snipcart.com/themes/v3.0.27/default/snipcart.js"
 
 
 ###################################### Navigation ######################################
-
-# homepage section menu
-# [[menu.main]]
-# name = "Home"
-# url = "/"
-# weight = 1
 
 [[menu.main]]
 name = "About"
@@ -58,33 +48,13 @@ weight = 1
 
 [[menu.main]]
 name = "Schedule"
-url = "/files/Schedule-A3-2025.pdf"
+url = "/files/schedule-a3-2025.pdf"
 weight = 2
-
-#[[menu.main]]
-#name = "Register"
-#url = "https://pretix.eu/passthesalt/2025/"
-#weight = 3
-
-#[[menu.main]]
-#name = "2024 Videos"
-#url = "https://passthesalt.ubicast.tv/channels/#2024"
-#weight = 3
-
-#[[menu.main]]
-#name = "2024 Memories"
-#url = "https://www.flickr.com/photos/yobibe/albums/72177720318671117/"
-#weight = 3
 
 [[menu.main]]
 name = "Practical"
 url = "https://2025.pass-the-salt.org/practical/"
 weight = 4
-
-#[[menu.main]]
-#name = "Report"
-#url = "https://2024.pass-the-salt.org/annual-report/"
-#weight = 4
 
 [[menu.main]]
 name = "Sponsors"
@@ -101,22 +71,6 @@ name = "Archives"
 url = "https://passthesalt.ubicast.tv"
 weight = 7
 
-# [[menu.main]]
-# name = "Contact"
-# url = "contact/"
-# weight = 5
-
-# footer menu
-# [[menu.footer]]
-# name = "Blog"
-# url = "blog/"
-# weight = 1
-
-# [[menu.footer]]
-# name = "Contact"
-# url = "contact/"
-# weight = 2
-
 [[menu.footer]]
 name = "Contact"
 url = "mailto:contact@pass-the-salt.org"
@@ -132,13 +86,9 @@ name = "X / Twitter"
 url = "https://twitter.com/passthesaltcon"
 weight = 3
 
-# [[menu.footer]]
-# name = "Privacy Policy"
-# url = "privacy-policy/"
-# weight = 4
-
 
 ########################### Default parameters ##########################
+
 [params]
 logo = "images/logo.png"
 logo_width = "103px"
