--- a/config.toml
+++ b/config.toml
@@ -48,7 +48,7 @@ weight = 1
 
 [[menu.main]]
 name = "Schedule"
-url = "/files/schedule-a3-2025.pdf"
+url = "https://cfp.pass-the-salt.org/pts2025/schedule/"
 weight = 2
 
 [[menu.main]]
